[package]
name = "peperone"
version = "0.1.0"
authors = ["timvisee <3a4fb3964f@sinenomine.email>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = "3.0.0-beta.2"
dirs = "3.0"
notify = "4.0.17"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
